# backrunner-rs

./: .gitignore  Cargo.toml  Makefile  MyModule.jl  Project.toml  README.md  benchmark  build.rs  examples  out2  out3  package-lock.json  pairs.json  pairs_2_500.json  pairs_600.json  pairs_new.json  r.json  r.py  report.json
.github/workflows/: rust.yml
CFMMRouter-rs/: Makefile
CFMMRouter-rs/CFMMRouter.jl/: Makefile  Manifest.toml  Project.toml
CFMMRouter-rs/CFMMRouter.jl/examples/: Univ3.jl  arbitrage.jl  liquidate.jl
CFMMRouter-rs/CFMMRouter.jl/src/: CFMMRouter.jl  cfmms.jl  objectives.jl  router.jl
CFMMRouter-rs/CFMMRouter.jl/test/: cfmms.jl
CFMMRouter-rs/template/: template.jl
blocknative/: Cargo.toml
blocknative/src/: lib.rs  models.rs
blocknative/src/ws/: mod.rs  models.rs  ws.rs
include/: bzlib.h  wrapper.h
lib/: Project.toml
lib/src/: lib.jl
lp/: e.lp  i.lp  r.lp  t.lp
src/: arb_signal.rs  arb_signal.rs.bk  arb_thread_pool.rs  arb_thread_pool.rs.bk  arbitrage_path.rs  arbitrage_paths.rs  blocknative_client.rs  call_julia.rs  call_julia.rs.bk  cfmmrouter.rs  confirmed_tx_monitor.rs  crypto_math.rs  crypto_pair.rs  dex_pool.rs  flashbot_strategy.rs  graphql_uniswapv2.rs  graphql_uniswapv3.rs  lib.rs  main.rs  main2.rs  path_sequence.rs  path_sequence_factory.rs  pending_tx_monitor.rs  sequence_token.rs  swap_route.rs  three_path_sequence.rs  tracing.rs  transaction_log_utils.rs  transaction_utils.rs  two_path_sequence.rs  uniswap_providers.rs  uniswap_transaction.rs  uniswapv2_pairs.rs  uniswapv3_pools.rs
src/contracts/: lib.rs  mod.rs  paths.rs  vault.rs
src/contracts/artifacts/: BalancerV2Authorizer.json  BalancerV2BasePool.json  BalancerV2BasePoolFactory.json  BalancerV2LiquidityBootstrappingPool.json  BalancerV2LiquidityBootstrappingPoolFactory.json  BalancerV2NoProtocolFeeLiquidityBootstrappingPoolFactory.json  BalancerV2StablePool.json  BalancerV2StablePoolFactory.json  BalancerV2Vault.json  BalancerV2WeightedPool.json  BalancerV2WeightedPool2TokensFactory.json  BalancerV2WeightedPoolFactory.json  CowProtocolToken.json  CowProtocolVirtualToken.json  ERC20.json  ERC20Mintable.json  GPv2AllowListAuthentication.json  GPv2Settlement.json  HoneyswapFactory.json  HoneyswapRouter.json  ISwaprPair.json  IUniswapLikeFactory.json  IUniswapLikePair.json  IUniswapLikeRouter.json  IUniswapV3Factory.json  IZeroEx.json  SwaprFactory.json  SwaprRouter.json  UniswapV2Factory.json  UniswapV2Router02.json  WETH9.json  bep-20-token-abi.json  uniswap_v2_library.json
src/contracts/bindings/: arbitrage_swap.rs  bep20.rs  cake_router.rs  context.rs  erc20.rs  flash_bots_uniswap_query.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_pair.rs  i_uniswap_v2_pairs.rs  ierc20.rs  ierc20_metadata.rs  iweth9.rs  mod.rs  t_token.rs  uniswap_v2_factory.rs  uniswap_v2_pair.rs  uniswap_v2_router_02.rs  uniswap_v3_router.rs  weth9.rs
src/curve/: base.rs  calculator.rs  constant_price.rs  constant_product.rs  fees.rs  offset.rs  stable.rs
src/queries/: .graphqlconfig  uniswapv2_pairs.graphql  uniswapv2_schema.graphql  uniswapv3_pools.graphql  uniswapv3_schema.json  v3.graphql
src/sources/: balancer_v2.rs  baoswap.rs  honeyswap.rs  sushiswap.rs  swapr.rs  uniswap_v2.rs  uniswap_v3_pair_provider.rs
src/sources/balancer_v2/: graph_api.rs  pool_fetching.rs  pool_init.rs  pools.rs  swap.rs
src/sources/balancer_v2/pool_fetching/: aggregate.rs  cache.rs  internal.rs  pool_storage.rs  registry.rs
src/sources/balancer_v2/pools/: common.rs  liquidity_bootstrapping.rs  no_protocol_fee_liquidity_bootstrapping.rs  stable.rs  weighted.rs  weighted_2token.rs
src/sources/balancer_v2/swap/: error.rs  fixed_point.rs  math.rs  stable_math.rs  weighted_math.rs
src/sources/balancer_v2/swap/fixed_point/: logexpmath.rs
src/sources/swapr/: reader.rs
src/sources/uniswap_v2/: macros.rs  pair_provider.rs  pool_cache.rs  pool_fetching.rs
src/utils/: common.rs  conversions.rs  mod.rs  ratio_as_decimal.rs  u256_decimal.rs  uniswap_v3_liquidity.rs  uniswap_v3_sdk.rs  uniswapv2_utils.rs  uniswapv3_utils.rs
test/: arb.jl  cfmms.jl  objectives.jl  runtests.jl  swap.jl
