[package]
name = "backrunner-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
async-std = "1.11.0"
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
chrono = "0"
serde_json = "1"
once_cell = "1.12.0"
rand = "0.8.4"
tracing = "0.1.26"
futures = { version = "0.3.21", features = ["thread-pool"]}
futures-util = "*"
tracing-subscriber = {version ="0.2.19", features = ["fmt"]}
tracing-appender = "0.1.2"
blocknative = {path = "./blocknative-rs", version = "0.1.0" }

ethereum-types = "*"

#petgraph = {path = "../../petgraph", version = "0.6.0" }
rayon = "*"
graphql_client = { version="*", features = ["reqwest-blocking"] }
#moka = "*"
futures-signals = "*"
#eventbus = "*"
#criterion = "*"
num-bigint ={ version = "*", features = ["serde"] }
bigdecimal = { version = "*", features = ["serde"] }
anyhow = "*"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
clap = { version = "3.1.18", features = ["derive"] }
log = "^0.4"
sim = "*"
env_logger = "^0.5"
dashmap = "*"
crypto-bigint = "*"
itertools = "0.10.3"
#crossbeam = "*"
#tokio-console = "*"
# sage - knowledge graph
#asyncplusplus= "*"
#thread_id = "*"
num-rational = "*"
num-traits = "*"
ethabi = "*"
lazy_static = "*"
ethers = {version = "*", features = ["ws","abigen"]}
libmath = "*"
url = "*"

stream-cancel ="*"