[package]
name = "backrunner-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
async-std = {version = "1.11.0", features = ["attributes"]}
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "*", features = ["full"] }
chrono = "0"
serde_json = "1"
once_cell = "1.12.0"
rand = "0.8.4"
tracing = "0.1.26"
futures = { version = "0.3.21", features = ["thread-pool"]}
futures-util = "*"
tracing-subscriber = {version ="0.2.19", features = ["fmt"]}
tracing-appender = "0.1.2"
blocknative = {path = "./blocknative", version = "0.1.0" }
ethers-flashbots = "*"
ethereum-types = "*"
env = "*"
#petgraph = {path = "../../petgraph", version = "0.6.0" }
rayon = "*"
graphql_client = { version="*", features = ["reqwest-blocking"] }
#moka = "*"
futures-signals = "*"
#eventbus = "*"
async-trait = "*"
#criterion = "*"
num-bigint ={ version = "*", features = ["serde"] }
bigdecimal = { version = "*", features = ["serde"] }
anyhow = "*"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
clap = { version = "3.1.18", features = ["derive"] }
log = "^0.4"
sim = "*"
env_logger = "^0.5"
curl = { version = "*", features = ["ssl"]}
dashmap = "*"
crypto-bigint = "*"
itertools = "0.10.3"
#crossbeam = "*"
#tokio-console = "*"
# sage - knowledge graph
#asyncplusplus= "*"
#thread_id = "*"
num-rational = { version = "*", features = ["serde"]}
num-traits = "*"
ethabi = "*"
lazy_static = "*"
ethers = {version = "*", features = ["ws","abigen", "openssl"]}
libmath = "*"
url = "*"
color-eyre = "0.6.1"
stream-cancel ="*"
serde_with = "*"
num-integer = "*"
