[package]
name = "backrunner-rs"
edition = "2021"
version = "0.1.0"
[package.metadata.cargo-udeps.ignore]
normal = ["if_chain"]

[dependencies]
anyhow = "*"
async-trait = "*"
chrono = "0"
color-eyre = "0.6.1"
crypto-bigint = "*"
dashmap = "*"
ethabi = "*"
ethereum-types = "*"
ethers-flashbots = "*"
futures-util = "*"
if_chain = "1.0.0"
itertools = "0.10.3"
lazy_static = "*"
libmath = "*"
log = "^0.4"
num = "*"
num-integer = "*"
num-traits = "*"
once_cell = "1.12.0"
rand = "0.8.4"
rayon = "*"
serde_json = "1"
serde_with = "*"
tracing = "0.1.26"
url = "*"
base64 = "*"

[dependencies.async-std]
version = "1.11.0"
features = ["attributes"]
optional = false

[dependencies.bigdecimal]
version = "*"
features = ["serde"]
optional = false

[dependencies.blocknative]
version = "0.1.0"
path = "./blocknative"
features = []
optional = false

[dependencies.curl]
version = "*"
features = ["ssl"]
optional = false

[dependencies.ethers]
version = "*"
features = ["ws", "abigen", "openssl"]
optional = false

[dependencies.futures]
version = "0.3.21"
features = ["thread-pool"]
optional = false

[dependencies.futures-signals]
version = "*"
features = ["debug","serde"]
optional = false
default-features = false

[dependencies.graphql_client]
version = "*"
features = ["reqwest-blocking"]
optional = false

[dependencies.num-bigint]
version = "*"
features = ["serde"]
optional = false

[dependencies.num-rational]
version = "*"
features = ["serde"]
optional = false

[dependencies.reqwest]
version = "^0.11"
features = ["json", "blocking"]
optional = false

[dependencies.serde]
version = "1.0.136"

features = ["derive"]
optional = false

[dependencies.tokio]
version = "1.18.2"
features = ["full"]
optional = false

[dependencies.tokio-util]
version = "*"
features = ["full"]
optional = false
[target."cfg(any(windows, unix))".dependencies]

[target."cfg(any(windows, unix))".dev-dependencies]

[target."cfg(any(windows, unix))".build-dependencies]
[profile.release]
lto = true

[profile.release.package]
